--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,14 +1,13 @@
 /* general */
 .form{
   border-radius: 5px;
-  height: 40px;
+  height: 45px;
   padding: 10px 20px;
   display: flex;
   align-items: center;
   gap: 20px;
-  object-fit: contain;
-  margin-top: 40px;
-  border: 1px solid red;
+  margin-top: 18px;
+  color: hsl(235, 24%, 19%);
 }
 .check{
   appearance: none;
@@ -26,17 +25,17 @@
 }
 .completed{
   border-radius: 50%;
-  height: 20px;
-  width: 20px;
+  height: 22px;
+  width: 22px;
   background: linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%)) ;
 }
 .check:checked{
   appearance: none;
-  height: 11px;
-  width: 9px;
-  margin: 4.5px;
+  height: 10px;
+  width: 12px;
+  margin: 6px;
   border-radius: 50%;
-  /* background-image: url("src/assets/images/icon-check.svg"); */
+  background-image: url("../../assets/images/icon-check.svg");
   cursor: pointer;
 }
 
@@ -51,14 +50,17 @@
 }
 
 /* light mode */
-.light-mode{
+.light-mode-form{
   background: hsl(0, 0%, 98%);
 }
 
 /* dark mode */
-.dark-mode{
+.dark-mode-form{
   background: hsl(235, 24%, 19%);
 }
 .dark-input{
   color: hsl(0, 0%, 98%);
+}
+.dark-input::placeholder{
+  color: hsl(234, 31%, 81%);
 }
