--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
   font-weight: 400;
 }
 .background{
-  max-width: 100%;
+  width: 100%;
   position: absolute;
   z-index: 1;
 }
@@ -18,16 +18,15 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  justify-content: center;
 }
 .app-elements{
   display: flex;
   flex-direction: column;
-  width: 500px;
-  height: 550px; 
+  width: 550px;
+  min-width: 375px;
   position: absolute;
   z-index: 2;
-  margin: auto;
+  margin: 65px auto ;
 }
 .title{
   min-width: 100%;
