--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -4,8 +4,6 @@
   max-width: 100%;
   margin-top: 30px;
   object-fit: contain;
-  box-shadow: 0px 50px 80px rgba(25, 25, 25, 0.4);
-  border: 1px solid red;
 }
 .menu{
   display: flex;
@@ -13,7 +11,7 @@
   align-items: center;
   height: 35px;
   font-weight: 400;
-  font-size: 15px; 
+  font-size: 14px; 
   padding: 2.5px 20px;
   color: hsl(234, 11%, 52%);
 }
@@ -23,6 +21,13 @@
 }
 .radio-btn{
   appearance: none;
+}
+.clear-btn-light, .clear-btn-dark{
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 14px;
+  color: hsl(234, 11%, 52%);
 }
 
 /* both mode */
@@ -37,19 +42,26 @@
 }
 
 /* light mode */
-.light-mode{
+.light-mode-list{
   color: hsl(235, 24%, 19%);
   background: hsl(0, 0%, 98%);
+  box-shadow: 1px 20px 30px 4px rgb(25 25 25 / 21%);
 }
 .light-filter:hover{
   color: hsl(237, 14%, 26%);
 }
+.clear-btn-light:hover {
+  color: hsl(235, 24%, 19%);
+}
 /* dark mode */
-.dark-mode{
-  font-weight: 400;
-  color: hsl(236, 33%, 92%);
+.dark-mode-list{
+  color: hsl(234, 31%, 81%);
   background: hsl(235, 24%, 19%);
+  box-shadow: 1px 20px 30px 4px rgb(10 10 12 / 44%);
 }
 .dark-filter:hover{
+  color: hsl(236, 33%, 92%);
+}
+.clear-btn-dark:hover {
   color: hsl(236, 33%, 92%);
 }
