--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -38,7 +38,7 @@
     object-fit: cover;
   }
   .app-elements{
-    max-width: 550px;
+    width: 500px;
     min-width: 375px;
     margin: 65px auto ;
   }
