--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -18,7 +18,7 @@
   gap: 10px;
 }
 .radio-btn{
-  appearance: none;
+  display: none;
 }
 .clear-btn-light, .clear-btn-dark{
   border: none;
@@ -57,8 +57,8 @@
   color: hsl(234, 11%, 52%);
   font-weight: 600;
 }
-.active{
-  color: hsl(220, 98%, 61%);
+.radio-btn:checked + label{
+  color: rgb(58, 123, 253);
 }
 
 /* light mode */
