--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -42,7 +42,7 @@
     padding: 10px 20px;
   }
 }
-@media screen and (min-width: 375px) and (max-width: 499px){
+@media screen and (max-width: 499px){
   .form{
     height: 25px;
     padding: 15px 15px;
