--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -60,7 +60,7 @@
     padding: 10px 20px;
   }
 }
-@media screen and (min-width: 375px) and (max-width: 499px){
+@media screen and (max-width: 499px){
   .todo-container{
     height: 25px;
     padding: 15px 15px;
